.happypack/s--1892909703
SyntaxError: Unexpected token, expected , (113:94)

[0m [90m 111 | [39m
 [90m 112 | [39m                          {[90m/* <RaisedButton label="Ver ficha" primary={true} fullWidth={true}/> */[39m}
[31m[1m>[22m[39m[90m 113 | [39m                          [33m<[39m[33mFlatButton[39m label[33m=[39m[32m"Action2"[39m fullWidth[33m=[39m{[36mtrue[39m} styled[33m=[39m{{background[33m:[39mred[33m;[39m}}[33m>[39m
 [90m     | [39m                                                                                              [31m[1m^[22m[39m
 [90m 114 | [39m                            [33m<[39m[33mComment[39m[33m/[39m[33m>[39m
 [90m 115 | [39m                            [33mLast[39m comment[33m--[39m[33m-[39m
 [90m 116 | [39m                          [33m<[39m[33m/[39m[33mFlatButton[39m[33m>[39m[0m

BabelLoaderError: SyntaxError: Unexpected token, expected , (113:94)

[0m [90m 111 | [39m
 [90m 112 | [39m                          {[90m/* <RaisedButton label="Ver ficha" primary={true} fullWidth={true}/> */[39m}
[31m[1m>[22m[39m[90m 113 | [39m                          [33m<[39m[33mFlatButton[39m label[33m=[39m[32m"Action2"[39m fullWidth[33m=[39m{[36mtrue[39m} styled[33m=[39m{{background[33m:[39mred[33m;[39m}}[33m>[39m
 [90m     | [39m                                                                                              [31m[1m^[22m[39m
 [90m 114 | [39m                            [33m<[39m[33mComment[39m[33m/[39m[33m>[39m
 [90m 115 | [39m                            [33mLast[39m comment[33m--[39m[33m-[39m
 [90m 116 | [39m                          [33m<[39m[33m/[39m[33mFlatButton[39m[33m>[39m[0m

    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:61:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyLoader.js:42:15)
    at LOADER_EXECUTION (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/loader-runner/lib/LoaderRunner.js:119:14)